--- a/lang/da.json
+++ b/lang/da.json
@@ -4,5 +4,7 @@
   "page.home.navbar.daily": "24 timer",
   "page.home.navbar.weekly": "7 dage",
   "page.home.navbar.about": "Om",
-  "page.daily.chart.temperature": "Temperatur"
+  "page.daily.chart.temperature": "Temperatur",
+  "page.daily.chart.rain": "Nedbør",
+  "page.daily.chart.accum": "Akumuleret (nulstiller hver midnat)"
 }
