--- a/lang/en.json
+++ b/lang/en.json
@@ -4,5 +4,7 @@
   "page.home.navbar.daily": "24 hours",
   "page.home.navbar.weekly": "7 days",
   "page.home.navbar.about": "About",
-  "page.daily.chart.temperature": "Temperature"
+  "page.daily.chart.temperature": "Temperature",
+  "page.daily.chart.rain": "Precipitation",
+  "page.daily.chart.accum": "Accumulated (resets at midnight)"
 }
