--- a/lang/da.json
+++ b/lang/da.json
@@ -7,5 +7,5 @@
   "page.daily.chart.temperature": "Temperatur",
   "page.daily.chart.rain": "Nedbør",
   "page.daily.chart.rain.units": "Nedbør/time",
-  "page.daily.chart.accum": "Akumuleret (nulstiller hver midnat)"
+  "page.daily.chart.accum": "Akumuleret (nulstiller ved midnat)"
 }
